Fixed padding on mobile

--- a/style.css
+++ b/style.css
@@ -22,15 +22,21 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+    #game-container {
+        margin-top: 40px;
+    }
     body {
-        transform: scale(1.1);
+        transform: scale(1);
         justify-content: flex-start;
     }
 }
 
 @media screen and (max-width: 480px) {
+    #game-container {
+        margin-top: 60px;
+    }
     body {
-        transform: scale(1.05);
+        transform: scale(1);
         justify-content: flex-start;
     }
 }
@@ -527,5 +533,26 @@ body::before {
     60% {
         transform: scaleX(1);
         filter: brightness(1);
+    }
+}
+
+.bmc-btn-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+}
+
+.bmc-btn{
+    min-width: 0px !important;
+}
+
+/* Make button smaller on mobile */
+@media (max-width: 768px) {
+    .bmc-btn-container {
+        transform: scale(0.8);
+        transform-origin: bottom right;
+        bottom: 10px;
+        right: 10px;
     }
 }
